--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,15 +11,20 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="false"
         android:theme="@style/Theme.FnialProjectAndriod" >
+        
         <activity
             android:name=".MainActivity"
             android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity android:name=".CreateEventActivity" android:exported="false" />
+        <activity android:name=".MyEventsActivity" android:exported="false" />
+        <activity android:name=".WallActivity" android:theme="@style/Theme.AppCompat.NoActionBar" android:exported="false" />
+
     </application>
 
 </manifest>
