--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="false"
-        android:theme="@style/Theme.FnialProjectAndriod" >
+        android:theme="@style/Theme.MaterialComponents.DayNight.NoActionBar" >
         
         <activity
             android:name=".MainActivity"
@@ -23,7 +23,7 @@
 
         <activity android:name=".CreateEventActivity" android:exported="false" />
         <activity android:name=".MyEventsActivity" android:exported="false" />
-        <activity android:name=".WallActivity" android:theme="@style/Theme.AppCompat.NoActionBar" android:exported="false" />
+        <activity android:name=".WallActivity" android:exported="false" />
         <activity android:name=".ProfileActivity" android:exported="false" />
         <activity android:name=".AddMemoryActivity" android:exported="false" />
 
